Fix login button alignment.

--- a/static/frontend.css
+++ b/static/frontend.css
@@ -221,6 +221,7 @@ a.login-button {
     cursor: pointer;
     font-size: 1.2em;
     text-align: center;
+    margin-left: .05em;
 }
 
 button.login-button {
